# containerl

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements
.github/workflows/: code-checks.yaml  package-publish.yaml  package_publish.yaml  pytest.yaml  type-hints-check.yaml
examples/agents/: Dockerfile
examples/anylogic/stock_management/agent/: Dockerfile  basic_ppo.py  requirements.txt
examples/anylogic/stock_management/environment/: Dockerfile  environment.py  requirements.txt
examples/anylogic/stock_management/proportional_agent/: Dockerfile  agent.py
examples/basilisk/environment/: Dockerfile  environment.py  requirements.txt
examples/environments/: Dockerfile  requirements.txt
examples/environments/anylogic/stock_management/: environment.py
examples/environments/generic/continuous_action_vectorized/: environment.py
examples/environments/generic/discrete_actions_vectorized/: environment.py
examples/environments/generic/multibinary_actions_vectorized/: environment.py
examples/environments/generic/multidiscrete_actions_vectorized/: environment.py
examples/environments/gymnasium/atari/: environment.py
examples/environments/gymnasium/box2d/: environment.py
examples/environments/gymnasium/classic_control/: environment.py
examples/environments/gymnasium/mujoco/: environment.py
examples/generic/agents/continuous_action/: Dockerfile  agent.py
examples/generic/agents/continuous_actions/: Dockerfile  agent.py
examples/generic/agents/discrete_actions/: Dockerfile  agent.py
examples/generic/agents/multibinary_actions/: Dockerfile  agent.py
examples/generic/agents/multidiscrete_actions/: Dockerfile  agent.py
examples/generic/environments/continuous_action/: Dockerfile  environment.py
examples/generic/environments/continuous_action_vectorized/: Dockerfile  environment.py
examples/generic/environments/continuous_actions/: Dockerfile  environment.py
examples/generic/environments/continuous_actions_vectorized/: Dockerfile  environment.py
examples/generic/environments/discrete_actions/: Dockerfile  environment.py
examples/generic/environments/discrete_actions_vectorized/: Dockerfile  environment.py
examples/generic/environments/multibinary_actions/: Dockerfile  environment.py  requirements.txt
examples/generic/environments/multibinary_actions_vectorized/: Dockerfile  environment.py
examples/generic/environments/multidiscrete_actions/: Dockerfile  environment.py
examples/generic/environments/multidiscrete_actions_vectorized/: Dockerfile  environment.py
examples/genesis/drone_hovering/agent/: Dockerfile  agent.py
examples/genesis/drone_hovering/environment/: Dockerfile  (+2 more)
src/containerl/: __init__.py  cli.py
src/containerl/interface/: __init__.py  proto.proto  proto_pb2.py  proto_pb2.pyi  proto_pb2_grpc.py  proto_pb2_grpc.pyi  utils.py
src/containerl/scripts/: containerl_cli.py
stubs/msgpack/: __init__.pyi
tests/: test_agent_generic_build_run_test.py  test_environment_generic_build_run_test.py  test_environment_genesis_build_run_test.py  test_environment_gymnasium_build_run_test.py  test_unit_agent_interface.py  test_unit_cli.py
tests/integration/: test_agent_generic_build_run_test.py  test_agents_build_run_test.py  test_environment_build_run_test.py  test_environment_gymnasium_build_run_test.py
tests/unit/: test_agent_interface.py  test_cli.py  test_environment_interface.py  test_utils.py
(+27 files in other folders)
