[tool.poetry]
name = "containerl"
version = "0.1.0"
description = "A package for dynamic systems simulation and Docker management"
readme = "README.md"
license = "MIT"
authors = [] # alessandropalmas.mail@gmail.com
packages = [
    { include = "containerl", from = "src" }
]

[tool.poetry.dependencies]
python = ">=3.7"
docker = ">=6.0.0"
grpcio-tools = "*"
msgpack = "*"
gymnasium = "*"
pytest

[tool.poetry.scripts]
containerl = "containerl.cli:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
