[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "containerl"
version = "0.1.0"
keywords = ["keyword1", "keyword2"]
maintainers = [
  { name="Alessandro Palmas", email="alex@artificialtwin.com" },
]
authors = [
  { name="Alessandro Palmas", email="alex@artificialtwin.com" },
]
description = "Add your description here"
readme = { file = "README.md", content-type = "text/markdown"}
license = { text = "MIT" }

requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Linux",
]
# Added with `uv add package_name`
dependencies = [
    "gymnasium",
    "grpcio-tools",
    "msgpack",
]

# Added with `uv add --group dev package_name`
[dependency-groups]
dev = [
    "mypy>=1.17.1",
    "pre-commit>=4.3.0",
    "pyright>=1.1.405",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.12.12",
    "twine>=6.2.0",
    "types-grpcio>=1.0.0.20251009",
    "types-protobuf>=6.32.1.20251105",
]

docs = [
    "furo>=2025.7.19",
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.2.0",
]
examples = [
    "ale-py>=0.11.2",
    "gymnasium==0.29.1",
    "matplotlib>=3.10.7",
    "matplotlib-stubs>=0.3.11",
    "types-psutil>=7.0.0.20251111",
]

[project.urls]
Homepage = "https://github.com/alexpalms/containerl"
Issues = "https://github.com/alexpalms/containerl/issues"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
containerl = ["py.typed", "data/*"]

[project.scripts]
containerl-cli = "containerl.cli:main"

[tool.pyright]
include = ["src", "examples", "tests", "docs"]
typeCheckingMode = "strict"
reportUnusedVariable = "error"
reportMissingImports = "error"
reportMissingParameterType = "error"
reportMissingTypeArgument = "error"
reportUntypedFunctionDecorator = "error"
reportMissingTypeStubs = "error"
extraPaths = ["stubs"]
exclude = [
  "src/containerl/interface/proto_pb2*.*",
  "examples/anylogic/stock_management/environment/*",
  "examples/anylogic/stock_management/agent/basic_ppo.py",
]

[tool.mypy]
strict = true
python_version = "3.12"
files = ["src", "tests", "docs"]
mypy_path = ["stubs"]

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["src/containerl/interface/proto_pb2*.*"]

[tool.ruff.lint]
select = [
  "E", "F", "UP", "I", "B", "N", "S", "A", "C4", "T20"
]
ignore = ["E501", "D107"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.ruff.lint.per-file-ignores]
"src/**/__init__.py" = ["D104", "D107"]  # ignore module and __init__ docstrings
"tests/**" = ["S101"]  # allow asserts in tests

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
